# dataQruiser

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: Example 1 - Creating datasets and adding files.ipynb  Example 2 - Native data acquisition.ipynb  Example 2 - Synchronizing qcodes database.ipynb  Example 3 - Native data acquisition.ipynb  Example 3 - Synchronizing qcodes database.ipynb  Example 4 - Creating datasets manually.ipynb  Example 4 -Synchronizing a folder-base datasets.ipynb  Example 5 - Creating datasets manually.ipynb  Example 5 - Sync custom data.ipynb  Example 6 - Analysis T1 correlation.ipynb  readme.md  t1_analysis.py  utils.py
examples/data/data_drag_and_drop/: Fig2_Lakic2024.ipynb  measured_data_1.hdf5  mock_measurement_script.py
examples/data/folder_base_data/sample_A/20250831_141433/: .QH_manifest.yaml  _QH_dataset_info.yaml  measurement.txt  metadata.json
examples/data/qcodes_data/: QCoDeS_example.db  QCoDeS_example.db-shm  QCoDeS_example.db-wal
examples/data/sync_agent_example/: pyproject.toml
examples/data/sync_agent_example/file_sync_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/data_converter/: pyproject.toml
examples/data_converter/data_converter/: __init__.py  converter_txt_to_hdf5.py  test.py
examples/data_converter/data_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/data_drag_and_drop/: measured_data_2.hdf5  mock_config.json  readme.txt
examples/qcodes_data/: QCoDeS_example.db  QCoDeS_example.db-shm  QCoDeS_example.db-wal
(+81 files in other folders)
