[project]
name = "data_converter"
version = "0.1.0"
description = "Custom file converter for QHarbor quantum measurement data"
authors = [
    {name = "QHarbor Team", email = "support@qharbor.nl"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "xarray>=0.19.0",
    "netcdf4>=1.5.0",
    "h5netcdf>=0.11.0",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"